# find-ferris

./: .justfile  Cargo.toml  flake.nix
assets/: config.toml  item_positions.json  roads.json
assets/crabs/: _list.ron
assets/crabs/alien/: config.toml
assets/crabs/bald/: config.toml
assets/crabs/ferris/: config.toml
assets/items/: _list.ron
assets/wheel/: config.toml
src/: main.rs
