[package]
name = "find-ferris"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[dependencies]
geng.git = "https://github.com/kuviman/geng"
serde = "1"

[build-dependencies]
cmake = "<=0.1.45" # https://github.com/PistonDevelopers/freetype-sys/issues/99
